--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
                 <h1> Khanh Mai</h1>
 
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-5">
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="navbutton">
 
                       <a class="button-1" href="index.html">About</a>
                       <a class="button-2" href="Portfolio.html">Portfolio</a>
                       <a class="button-3" href="Contact.html">Contact</a>
+                      <a class="button-3" href="https://www.linkedin.com/in/khanh-mai-b09530b3/">LinkedIn</a>
         
                      </div>
 
