--- a/Portfolio.html
+++ b/Portfolio.html
@@ -48,6 +48,44 @@
 
         <h2>Portfolio</h2>
         <hr>
+        <div class="row">
+            <div class="col-sm-3">
+
+                <div class="card text-center">
+
+                    <a href="https://morning-fjord-37921.herokuapp.com/">
+                        <img class="card-img" src="Assets/images/lovequest.PNG" alt="blank"></a>
+
+                    <!--card overlay seem does not work with link-->
+                    <!-- <div class="card-img-overlay">
+                      <h3 class="card-title">Project-1</h3>
+                    </div> -->
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+
+                <div class="card text-center">
+
+                    <a href="https://kmai01.github.io/Homework-5">
+                        <img class="card-img" src="Assets/images/Work_day.PNG" alt="blank"></a>
+
+
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+
+                <div class="card text-center">
+
+                    <a href="https://kmai01.github.io/Homework-6">
+                        <img class="card-img" src="Assets/images/weather.PNG" alt="blank"></a>
+
+
+                </div>
+            </div>
+        </div>
+
 
         <div class="row">
             <div class="col-sm-3">
