add more to portolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -46,7 +46,7 @@
 
 
 
-        <h2>Portfolio</h2>
+        <h3>Portfolio</h3>
         <hr>
         <div class="row">
             <div class="col-sm-3">
@@ -67,8 +67,18 @@
 
                 <div class="card text-center">
 
-                    <a href="https://kmai01.github.io/Homework-5">
-                        <img class="card-img" src="Assets/images/Work_day.PNG" alt="blank"></a>
+                    <a href="https://ctunnell.github.io/project-i/">
+                        <img class="card-img" src="Assets/images/get_media.PNG" alt="blank"></a>
+
+                </div>
+            </div>
+
+            <div class="col-sm-3">
+
+                <div class="card text-center">
+
+                    <a href="https://stark-caverns-10185.herokuapp.com/">
+                        <img class="card-img" src="Assets/images/notetaker.PNG" alt="blank"></a>
 
 
                 </div>
@@ -88,19 +98,6 @@
 
 
         <div class="row">
-            <div class="col-sm-3">
-
-                <div class="card text-center">
-
-                    <a href="https://ctunnell.github.io/project-i/">
-                        <img class="card-img" src="Assets/images/get_media.PNG" alt="blank"></a>
-
-                    <!--card overlay seem does not work with link-->
-                    <!-- <div class="card-img-overlay">
-                      <h3 class="card-title">Project-1</h3>
-                    </div> -->
-                </div>
-            </div>
 
             <div class="col-sm-3">
 
@@ -117,101 +114,87 @@
 
                 <div class="card text-center">
 
-                    <a href="https://kmai01.github.io/Homework-6">
-                        <img class="card-img" src="Assets/images/weather.PNG" alt="blank"></a>
+                    <img class="card-img" src="Assets/images/Visual_Studio_Code_logo.png" alt="blank">
 
+                    <div class="card-img-overlay">
+                        <h3 class="card-title">VS Code</h3>
+                    </div>
 
                 </div>
             </div>
-        </div>
 
-            <br>
+            <div class="col-sm-3">
 
-            <div class="row">
-                <div class="col-sm-3">
+                <div class="card text-center">
 
-                    <div class="card text-center">
 
-                        <img class="card-img" src="Assets/images/Visual_Studio_Code_logo.png" alt="blank">
+                    <img class="card-img" src="Assets/images/software_development_lifecycle.png" alt="blank">
 
-                        <div class="card-img-overlay">
-                            <h3 class="card-title">VS Code</h3>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-
-                    <div class="card text-center">
-
-                        <img class="card-img" src="Assets/images/software_development_lifecycle.png" alt="blank">
-
-                        <div class="card-img-overlay">
-                            <h3 class="card-title">SDLC</h3>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-
-                    <div class="card text-center">
-
-                        <img class="card-img" src="Assets/images/PCbuilding.png" alt="blank">
-
-                        <div class="card-img-overlay">
-                            <h3 class="card-title">PC Building</h3>
-                        </div>
+                    <div class="card-img-overlay">
+                        <h3 class="card-title">SDLC</h3>
                     </div>
                 </div>
             </div>
 
-            <br>
+            <div class="col-sm-3">
 
-            <div class="row">
-                <div class="col-sm-3">
+                <div class="card text-center">
+                    <img class="card-img" src="Assets/images/PCbuilding.png" alt="blank">
 
-                    <div class="card text-center">
-
-                        <img class="card-img" src="Assets/images/agile.png" alt="blank">
-
-                        <div class="card-img-overlay">
-                            <h3 class="card-title">Agile</h3>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-sm-3">
-
-                    <div class="card text-center">
-
-                        <a href="https://kmai01.github.io/Homework-6">
-
-                            <img class="card-img" src="Assets/images/drilling.jpg" alt="blank">
-                        </a>
-                        <div class="card-img-overlay">
-                            <h3 class="card-title">Oil Field</h3>
-                        </div>
-
+                    <div class="card-img-overlay">
+                        <h3 class="card-title">PC Building</h3>
                     </div>
                 </div>
             </div>
+
 
 
         </div>
 
-        </main>
-        <footer class="footer">Copyright @ </footer>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"></script>
+
+        <div class="row">
+
+
+            
+            <div class="col-sm-3">
+
+                <div class="card text-center">
+
+                    <img class="card-img" src="Assets/images/drilling.jpg" alt="blank">
+
+                    <div class="card-img-overlay">
+                        <h3 class="card-title">Oil Field</h3>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <br>
+
+        <div class="row">
+            <!-- More can be add here -->
+
+            
+        </div>
+
+
+    </div>
+
+    </main>
+    <footer class="footer">Copyright @ </footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
